@@ -1,3 +1,11 @@
+2008-10-04  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet-device-gsm.c
+	  src/applet-device-cdma.c
+	  src/applet-device-wired.c
+		- (wired_device_state_changed, cdma_device_state_changed,
+		   gsm_device_state_changed): show what connection just got connected
+
 2008-10-03  Dan Williams  <dcbw@redhat.com>
 
 	* src/wireless-dialog.c
